# vajraa

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  setup.py
.github/workflows/: publish.yml
docs/: _config.yml  architecture.html  cpp-api.html  flows.html  getting-started.html  index.html  memory-security.html  python-api.html
docs/assets/: docs.js  style.css
native/include/: crypto_engine.h  pal.h
native/src/: crypto_engine.cpp  pal_android.cpp  pal_embedded.c  pal_linux.cpp  pal_macos.cpp  pal_windows.cpp  secure_gemm_op.cpp
python/vajraa/: __init__.py  activation.py  base_shield.py  compiler.py  crypto.py  lora_shield.py  onnx_compiler.py  onnx_wrapper.py  pal.py  pytorch_wrapper.py
tests/: test_advanced_memory.py  test_base_shield.py  test_compiler_and_mixer.py  test_crypto.py  test_licensing_activation.py  test_lora_shield.py  test_memory_wipe.py  test_onnx_compiler.py  test_onnx_wrapper.py  test_pytorch_wrapper.py  test_secure_conv.py
tools/: compile_model.py  fetch_headers.py  find_ort.py  generate_docs.py  generate_license.py  intercept_inference_weights.py  scan_process_memory.py  verify_memory_wipe.py
